# fast_toolsearch_adapter

./: IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml
examples/: cli_demo.py  fastapi_app.py
migrations/: 001_tool_registry.sql
src/toolsearch_adapter/: __init__.py  adapter.py  audit.py  cache.py  policy.py  types.py  utils.py
src/toolsearch_adapter/executors/: __init__.py  base.py  function_map_executor.py  http_executor.py
src/toolsearch_adapter/registry/: __init__.py  base.py  json_registry.py  postgres_registry.py
tests/: __init__.py  test_adapter.py  test_audit.py  test_cache.py  test_executors.py  test_policy.py  test_registry.py  test_utils.py
