[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolsearch-adapter"
version = "0.1.0"
description = "Reusable Tool Search Adapter mimicking GPT-5.4 tool discovery flow"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Brad Duy - AI Expert" },
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary,pool]>=3.1",
]
http = [
    "httpx>=0.27",
]
fastapi = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
all = [
    "toolsearch-adapter[postgres,http,fastapi,dev]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/toolsearch_adapter"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
